<resources>
    <string name="app_name">Parkir</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_detail_parkir">Rute Parkir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="signal0">Success!</string>
    <string name="signal1">Failed!</string>
    <string name="signal2">Unknown Error!</string>
    <string name="signal3">No Connection!</string>
    <string name="signal4">Sorry, Cannot Connect To Server!</string>

    <string name="mainFailedLogin">Please Login!</string>
    <string name="login">Login</string>
    <string name="btnLogin">Masuk</string>
    <string name="btnSignup">Daftar</string>
    <string name="btnLogout">Log Out</string>

    <string name="t1">Sudah memiliki akun?</string>
    <string name="t2">Baru menggunakan aplikasi ini?</string>
    <string name="t3">Copyright 2015 Tomcat Inc.</string>
</resources>
