<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/biru"
    tools:context="com.tomcat.parkir.LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="163dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:layout_below="@+id/email"
                android:layout_alignLeft="@+id/email"
                android:textColorHint="@color/abu_hint"
                android:layout_alignStart="@+id/email">

                <EditText
                    android:id="@+id/login_password"
                    android:textColorHint="@color/abu_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/email"
                android:textColorHint="@color/abu_hint"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:background="@color/abu_button"
            android:layout_marginTop="21dp"
            android:layout_below="@+id/email_login_form"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="Belum Punya Akun ?"
            android:layout_marginLeft="39dp"
            android:layout_marginStart="39dp"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_alignLeft="@+id/email_sign_in_button"
            android:layout_alignStart="@+id/email_sign_in_button" />

        <TextView
            android:id="@+id/klik_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrasi"
            android:textColor="@color/putih"
            android:onClick="klikRegister"
            android:clickable="true"
            android:layout_marginLeft="11dp"
            android:layout_alignBaseline="@+id/textreg"
            android:layout_alignBottom="@+id/textreg"
            android:layout_toRightOf="@+id/textreg"
            android:layout_toEndOf="@+id/textreg"
            android:layout_marginStart="11dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo_cari"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>
